# R5B10-traitement-images

./: .gitignore  README.md  cleancode.sh  main.py  principal.py  pyproject.toml  requirements.txt
src/: SNR.py  bruit-additif.py  bruit-mutliplicatif.py  bruit_additif.py  bruit_multiplicatif.py  bruit_sel_poivre.py  gaussian_noise.py  image_management.py  noise_generator.py  saltPepperGrain.py  snr.py  snr_test.py  terminal_utils.py  test_complet.py
src/bruitage/: bruit_additif.py  bruit_multiplicatif.py  bruit_sel_poivre.py  bruitage.py
src/debruitage/: debruitage.py  debruitage_convolution.py  debruitage_median.py
